[package]
name = "nping"
version = "0.3.0"
edition = "2021"
license = "MIT License"
description = "Nping is a Ping tool developed in Rust. It supports concurrent Ping for multiple addresses, visual chart display, real-time data updates, and other features."
authors = ["hanshuaikang https://github.com/hanshuaikang"]

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
ratatui = "0.29.0"
tokio = { version = "1.42.0", features = ["full"] }
pinger="2.0.0"
anyhow="1.0.89"
